k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-frontend
  namespace: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-frontend
  template:
    metadata:
      labels:
        app: dashboard-frontend
    spec:
      containers:
      - name: main
        image: registry.prototype.act3-ace.com/veyorokonwsri/dashboard_frontend:v1.30
        ports:
        - containerPort: 80
